--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ anyhow = "1.0.66"
 axum = { version = "0.5.17", features = [ "ws", "headers" ] }
 dashmap = "5.4.0"
 http = "0.2.8"
-tokio = "1.22.0"
+tokio = { version = "1.22.0", features = [ "rt-multi-thread", "macros" ] }
 tower-http = { version = "0.3.4", features = [ "trace" ] }
 tracing = "0.1.37"
 url = "2.3.1"
@@ -19,10 +19,12 @@ headers = "0.3.8"
 once_cell = "1.16.0"
 regex = "1.7.0"
 futures = "0.3.25"
+clap = { version = "4.0.26", features = [ "derive" ] }
+axum-server = { version = "0.4.4", features = [ "tls-rustls" ] }
+pretty_env_logger = "0.4.0"
 
 [dev-dependencies]
 async-trait = "0.1.58"
-pretty_env_logger = "0.4.0"
 tokio = { version = "1.22.0", features = [ "rt", "macros" ] }
 tokio-tungstenite = "0.17.2"
 tungstenite = "0.17.3"
