--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.66"
-axum = { version = "0.5.17", features = [ "ws", "headers" ] }
+axum = { version = "0.6.0", features = [ "ws", "headers" ] }
 dashmap = "5.4.0"
 http = "0.2.8"
 tokio = { version = "1.22.0", features = [ "rt-multi-thread", "macros" ] }
@@ -19,10 +19,10 @@ headers = "0.3.8"
 once_cell = "1.16.0"
 regex = "1.7.0"
 futures = "0.3.25"
-clap = { version = "4.0.26", features = [ "derive" ] }
-axum-server = { version = "0.4.4", features = [ "tls-rustls" ] }
+clap = { version = "4.0.27", features = [ "derive" ] }
+axum-server = { git = "https://github.com/programatik29/axum-server", features = [ "tls-rustls" ] }
 pretty_env_logger = "0.4.0"
-serde = { version = "1.0.147", features = [ "derive" ] }
+serde = { version = "1.0.148", features = [ "derive" ] }
 http-body = "0.4.5"
 
 [dev-dependencies]
