--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ axum = { version = "0.6.0", features = [ "ws", "headers" ] }
 dashmap = "5.4.0"
 http = "0.2.8"
 tokio = { version = "1.22.0", features = [ "rt-multi-thread", "macros" ] }
-tower-http = { version = "0.3.4", features = [ "trace" ] }
+tower-http = { version = "0.3.4", features = [ "trace", "cors" ] }
 tracing = "0.1.37"
 url = "2.3.1"
 uuid = { version = "1.2.2", features = [ "v4", "serde" ] }
@@ -23,7 +23,6 @@ clap = { version = "4.0.27", features = [ "derive" ] }
 axum-server = { git = "https://github.com/programatik29/axum-server", features = [ "tls-rustls" ] }
 pretty_env_logger = "0.4.0"
 serde = { version = "1.0.148", features = [ "derive" ] }
-http-body = "0.4.5"
 
 [dev-dependencies]
 async-trait = "0.1.58"
