--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ once_cell = "1.16.0"
 regex = "1.7.0"
 futures = "0.3.25"
 clap = { version = "4.0.27", features = [ "derive" ] }
-axum-server = { git = "https://github.com/programatik29/axum-server", features = [ "tls-rustls" ] }
+axum-server = { git = "https://github.com/programatik29/axum-server", rev = "97e77096dbf4ffe9fb178fe60934ac37ba4ca433", features = [ "tls-rustls" ] }
 pretty_env_logger = "0.4.0"
 serde = { version = "1.0.148", features = [ "derive" ] }
 
